buildpacks/nodejs-yarn/tests/snapshots/test_prune_dev_dependencies_config.snap
---
source: test_support/src/lib.rs
---
## Heroku Node.js Engine

- Checking Node.js version
  - Node.js version not specified, using `22.x`
  - Resolved Node.js version: `22.17.0`
- Installing Node.js distribution
  - GET https://nodejs.org/download/release/v22.17.0/node-v22.17.0-<arch>.tar.gz ... (OK)
  - Downloading ... (<time_elapsed>)
  - Verifying checksum
  - Extracting Node.js `22.17.0 (<arch>)`
  - Installing Node.js `22.17.0 (<arch>)` ... (<time_elapsed>)
- Done (finished in <time_elapsed>)

## Heroku Node.js Corepack

- Using Corepack version `0.33.0`
- Found `packageManager` set to `yarn@4.2.2` in `package.json`
- Enabling Corepack
  - Creating Corepack shims
  - Executing `corepack enable --install-directory /layers/heroku_nodejs-corepack/shim/bin yarn`
- Installing `yarn@4.2.2`
  - Creating Corepack package manager
  - Running `corepack prepare`

      Preparing yarn@4.2.2...

  - Done (<time_elapsed>)
- Done (finished in <time_elapsed>)

## Heroku Node.js Yarn

- Yarn CLI operating in yarn 4.2.2 mode.
- Setting up yarn dependency cache
  - Running `yarn config set enableGlobalCache false`

      ➤ YN0000: Successfully set enableGlobalCache to false

  - Done (<time_elapsed>)
  - Running `yarn config set cacheFolder /layers/heroku_nodejs-yarn/deps/cache`

      ➤ YN0000: Successfully set cacheFolder to '/layers/heroku_nodejs-yarn/deps/cache'

  - Done (<time_elapsed>)
- Installing dependencies
  - Running `yarn install --immutable --inline-builds`

      ➤ YN0000: · Yarn 4.2.2
      ➤ YN0000: ┌ Resolution step
      ➤ YN0000: └ Completed
      ➤ YN0000: ┌ Fetch step
      ➤ YN0000: └ Completed
      ➤ YN0000: ┌ Link step
      ➤ YN0000: └ Completed
      ➤ YN0000: · Done in <time_elapsed>

  - Done (<time_elapsed>)
- Running scripts
  - No build scripts found
- Pruning dev dependencies
  - Skipping as pruning was disabled in project.toml

! Experimental feature used - project.toml configuration (this feature may change unexpectedly in the future)

- Done (finished in <time_elapsed>)
