buildpacks/nodejs-yarn/tests/snapshots/yarn_2_modules_nonzero.snap
---
source: test_support/src/lib.rs
---
# Heroku Node.js Engine

- Checking Node.js version
  - Node.js version not specified, using `22.x`
  - Resolved Node.js version: `22.14.0`
- Installing Node.js distribution
  - Downloading Node.js `22.14.0 (<arch>)` from https://nodejs.org/download/release/v22.14.0/node-v22.14.0-<arch>.tar.gz ... (<time_elapsed>)
  - Verifying checksum
  - Extracting Node.js `22.14.0 (<arch>)`
  - Installing Node.js `22.14.0 (<arch>)` ... (<time_elapsed>)
- Done (finished in <time_elapsed>)

# Heroku Node.js Yarn

- Detecting yarn CLI version to install
  - Detected yarn engine version range >=2.4.0 <2.5.0-0 in package.json
  - Resolved yarn CLI version: 2.4.2
- Installing yarn CLI
  - Downloading yarn 2.4.2 ... (<time_elapsed>)
  - Extracting yarn 2.4.2
  - Installing yarn 2.4.2
- Yarn CLI operating in yarn 2.4.1 mode.
- Setting up yarn dependency cache
  - Running `yarn config set enableGlobalCache false`

      ➤ YN0000: Successfully set enableGlobalCache to false

  - Done (<time_elapsed>)
  - Running `yarn config set cacheFolder /layers/heroku_nodejs-yarn/deps/cache`

      ➤ YN0000: Successfully set cacheFolder to '/layers/heroku_nodejs-yarn/deps/cache'

  - Done (<time_elapsed>)
- Installing dependencies
  - Running `yarn install --immutable --inline-builds`

      ➤ YN0000: ┌ Resolution step
      ➤ YN0000: └ Completed
      ➤ YN0000: ┌ Fetch step
      ➤ YN0013: │ <LIST OF DOWNLOADED MODULES>
      ➤ YN0000: └ Completed
      ➤ YN0000: ┌ Link step
      ➤ YN0000: └ Completed
      ➤ YN0000: Done in <time_elapsed>

  - Done (<time_elapsed>)
- Running scripts
  - No build scripts found
- Done (finished in <time_elapsed>)
